# Masitda

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  table.DDL
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-fix.md  bug_report.md  feature_request.md  refactor.md
.github/workflows/: django.yml
accounts/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/management/commands/: create_owner.py  create_user.py
api/: permissions.py  settings.py  urls.py
cores/: admin.py  apps.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
cores/management/commands/: create_restaurant.py  init_food_category.py  init_order_status.py
cores/tests/: test_carts.py  test_comments.py  test_menus.py  test_orders.py  test_restaurants.py  test_reviews.py
orders/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
orders/management/commands/: init_order_status.py
restaurant/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
restaurants/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
restaurants/management/commands/: create_restaurant.py  init_food_category.py
users/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_owner.py  create_user.py
