[tool.poetry]
name = "html"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.2"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.5"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.0"}
factory-boy = "^3.2.1"
faker = "^15.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
